Hopefully clear up the crappy database handling code FOR REAL. Don't export the sleep()/resume() at all and just do them before and after every db action now. Performance might suck, but it's not like Giggity needs to do 10 Gtransactions/sec.
99% of reported crashes I get were related to this and they were really not
necessary.